styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto, sans-serif;
}

body,
ul,
#card-title,
#card-body {
    padding: 0;
    margin: 0;
}

header,
footer {
    background-color: #1F2937;
}

header {
    padding-top: 20px;
    padding-bottom: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

nav {
    margin-bottom: 100px;
}

nav,
.hero {
    margin-left: auto;
    margin-right: auto;
    width: 1100px;
    display: flex;
    justify-content: space-between;
}

.hero-left-pane {
    width: 460px;
}

.header-links {
    display: flex;
    gap: 20px;
}

.header-logo,
.hero-main-text,
.sign-up-button,
#card-title {
    color: #F9FAF8;
}

.header-logo,
#card-title {
    font-size: 24px;
    font-weight: bold;
}

ul {
    list-style: none;
}

a,
a:visited {
    text-decoration: none;
}

.hero-detail,
.header-links a,
.sign-up-button,
#card-body,
footer {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-main-text {
    font-size: 48px;
    font-weight: bolder;
}

.sign-up-button {
    background-color: #3882F6;
    border: none;
    padding: 8px 36px;
    border-radius: 8px;
}

button {
    cursor: pointer;
}

.info-header {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    margin: 40px 0;
}

.info-container {
    display: flex;
    flex-direction: column;
}

.info-images figcaption {
    font-size: 18px;
    color: #838485;
    text-align: center;
}

.info-images img {
    border: 5px #3882F6 solid;
    border-radius: 26px;
    margin-bottom: 8px;
    object-fit: cover;
}

.info-images {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 120px;
}

figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 180px;
}

.quote-container {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 100px 0;
    margin: 0 auto;
}

.quote-text {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    color: #1F2937;
}

.quote-author {
    display: flex;
    justify-content: flex-end;
    font-weight: 900;
    font-size: 28px;
}

.quote-text,
.quote-author {
    width: 880px;
    margin: 0 auto;
}

.call-card-container {
    background-color: #3882F6;
    width: 1050px;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 55px 0;
    gap: 180px;
    margin: 90px auto;
}

.call-card-container .sign-up-button {
    border: 3px white solid;
}

.sign-up-button {
    font-size: 18px;
}

footer {
    padding: 28px 0;
    text-align: center;
}

